prevent visual feedback on safari

--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,13 @@
   position: absolute !important;
   min-height: 10px;
   min-width: 10px;
+  user-select: none;
+  -o-user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
 }
 .draggable .radius-controller {
   display: none;
